--- a/backend/laravel/.env.example
+++ b/backend/laravel/.env.example
@@ -53,6 +53,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SANCTUM_STATEFUL_DOMAINS=localhost:3000
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000
 SESSION_DOMAIN=localhost
 SESSION_SECURE_COOKIE=false
