--- a/backend/laravel/.env.example
+++ b/backend/laravel/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -15,7 +15,7 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-FILESYSTEM_DISK=public
+FILESYSTEM_DRIVER=public
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
