Dockerfile 0.2: new update

--- a/backend/laravel/Dockerfile
+++ b/backend/laravel/Dockerfile
@@ -1,13 +1,13 @@
 # Imagen base de PHP con CLI
 FROM php:8.2-cli
 
-# Instalar dependencias del sistema y extensiones para PostgreSQL (Render) y/o MySQL
+# Instalar dependencias del sistema y extensiones PDO para MySQL y PostgreSQL
 RUN apt-get update && apt-get install -y \
     git \
     unzip \
     libzip-dev \
     libpq-dev \
-    && docker-php-ext-install pdo pdo_pgsql zip \
+    && docker-php-ext-install pdo_mysql pdo_pgsql zip \
     && rm -rf /var/lib/apt/lists/*
 
 # Instalar Composer desde la imagen oficial
@@ -16,17 +16,13 @@ COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 # Directorio de trabajo dentro del contenedor
 WORKDIR /var/www/html
 
-# Copiamos el código de la app dentro del contenedor
+# Copiar código de la app
 COPY . .
 
-# Instalar dependencias de Laravel y optimizar autoloader
+# Instalar dependencias de Laravel (incluyendo require-dev)
 RUN composer install --optimize-autoloader --no-interaction --prefer-dist
 
-# Opcional: cachear config y rutas (si tus env vars ya están listas)
-# RUN php artisan config:cache && php artisan route:cache
-
-# Render usa la variable PORT para enrutar tráfico al contenedor
 ENV PORT=10000
 
-# Comando de arranque: correr migraciones y luego levantar el servidor
+# Comando de arranque: migrar y levantar servidor
 CMD php artisan migrate --force && php artisan serve --host 0.0.0.0 --port=${PORT}
