--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
-NEXT_PUBLIC_STORAGE_BASE_URL=http://localhost:8000/storage
+NEXT_PUBLIC_API_BASE_URL=https://mealsandfit.onrender.com
+NEXT_PUBLIC_STORAGE_BASE_URL=https://mealsandfit.onrender.com/storage
