--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,11 +66,11 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "latest",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5",
-    "eslint": "8.x",
-    "eslint-config-next": "latest"
+    "typescript": "^5"
   }
 }
