--- a/backend/laravel/.env.example
+++ b/backend/laravel/.env.example
@@ -56,6 +56,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000,mealsandfit.com
-SESSION_DOMAIN=localhost
-SESSION_SECURE_COOKIE=false
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000,mealsandfit.com,185d9338814b.ngrok-free.app
+SESSION_DOMAIN=null
