--- a/backend/laravel/.env.example
+++ b/backend/laravel/.env.example
@@ -24,7 +24,6 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -57,4 +56,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000,mealsandfit.com,185d9338814b.ngrok-free.app
-SESSION_DOMAIN=null
+SESSION_DOMAIN=185d9338814b.ngrok-free.app
+SESSION_SECURE_COOKIE=true
+SESSION_DRIVER=cookie
