--- a/backend/laravel/.env.example
+++ b/backend/laravel/.env.example
@@ -56,6 +56,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000,mealsandfit.com,f0e890341e72.ngrok-free.app
-SESSION_DOMAIN=f0e890341e72.ngrok-free.app
+SESSION_DOMAIN=.mealsandfit.com
 SESSION_SECURE_COOKIE=true
 SESSION_DRIVER=cookie
